# WinTools

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md
resources/: resources.qrc
scripts/: build-and-run.ps1  build-mediabar.ps1
src/: main.cpp
src/Logger/: log_sink.cpp  log_sink.hpp  logger.cpp  logger.hpp
src/Logger/ui/: log_viewer_window.cpp  log_viewer_window.hpp
src/Update/: update.cpp  update.hpp
src/common/Display/: dpi_utils.cpp  dpi_utils.hpp  monitors.cpp  monitors.hpp
src/common/Themes/: color_utils.hpp  fluent_style.cpp  fluent_style.hpp  icon_helper.cpp  icon_helper.hpp  theme_helper.cpp  theme_helper.hpp  theme_listener.cpp  theme_listener.hpp  window_colour.cpp  window_colour.hpp
src/common/hotkey/: hotkey_config.cpp  hotkey_config.hpp  hotkey_engine.cpp  hotkey_engine.hpp
src/common/platform/: autostart.hpp  platform.hpp
src/common/tray/: tray_manager.cpp  tray_manager.hpp
src/common/ui/: console_manager.cpp  console_manager.hpp  hotkey_bind_dialog.cpp  hotkey_bind_dialog.hpp  launch_page.cpp  launch_page.hpp  launch_page_models.hpp  launch_page_section_factory.cpp  launch_page_section_factory.hpp  screen_relative_size.cpp  screen_relative_size.hpp  settings_page.cpp  settings_page.hpp  setup_wizard.cpp  setup_wizard.hpp  theme_manager.cpp  theme_manager.hpp
src/common/version/wintoolsversion/: wintools_version.hpp.in
src/modules/: module_provider.cpp  module_provider.hpp
src/modules/AdvancedTaskManager/: README.md
src/modules/AdvancedTaskManager/src/core/: process_info.hpp  process_monitor.cpp  process_monitor.hpp
src/modules/AdvancedTaskManager/src/model/: process_model.cpp  process_model.hpp
src/modules/AdvancedTaskManager/src/ui/: perf_graph_widget.cpp  perf_graph_widget.hpp  profiler_overlay_controller.cpp  profiler_overlay_controller.hpp  profiler_overlay_widget.cpp  profiler_overlay_widget.hpp  task_manager_window.cpp  task_manager_window.hpp
src/modules/AudioMaster/: README.md
src/modules/AudioMaster/src/core/: audio_backend.cpp  audio_backend.hpp
src/modules/AudioMaster/src/ui/: audiomaster_window.cpp  audiomaster_window.hpp  virtual_devices_widget.cpp  virtual_devices_widget.hpp  vu_meter_widget.cpp  vu_meter_widget.hpp
src/modules/DiskSentinel/: README.MD
src/modules/DiskSentinel/src/core/: disk_node.hpp
src/modules/DiskSentinel/src/model/: storage_model.cpp  storage_model.hpp
src/modules/DiskSentinel/src/scanner/: disk_scanner.cpp  disk_scanner.hpp
src/modules/DiskSentinel/src/ui/: disk_sentinel_window.cpp  disk_sentinel_window.hpp  pie_chart_widget.cpp  pie_chart_widget.hpp  treemap_widget.cpp  treemap_widget.hpp
src/modules/GameVault/: README.md
src/modules/GameVault/src/core/: game_entry.hpp  game_library.cpp  game_library.hpp  game_tag_store.cpp  game_tag_store.hpp  gamevault_settings.cpp  gamevault_settings.hpp  playtime_tracker.cpp  playtime_tracker.hpp  steamgriddb_client.cpp  steamgriddb_client.hpp
src/modules/GameVault/src/model/: game_model.cpp  game_model.hpp
src/modules/GameVault/src/scanners/: custom_folder_scanner.cpp  custom_folder_scanner.hpp  emulator_scanners.cpp  emulator_scanners.hpp  epic_scanner.cpp  epic_scanner.hpp  gog_scanner.cpp  gog_scanner.hpp  i_game_scanner.hpp  retroarch_scanner.cpp  retroarch_scanner.hpp  steam_scanner.cpp  steam_scanner.hpp  xbox_scanner.cpp  xbox_scanner.hpp
src/modules/GameVault/src/ui/: game_card_delegate.cpp  game_card_delegate.hpp  gamevault_window.cpp  gamevault_window.hpp
src/modules/MediaBar/: README.md
src/modules/MediaBar/src/app/: app_main.cpp  app_main.hpp  main.cpp
src/modules/MediaBar/src/base/: MediaBarForm.cs  mediabar_controller.cpp  mediabar_controller.hpp  mediabar_form.cpp  mediabar_form.hpp
src/modules/MediaBar/src/clients/: sonos_client.cpp  sonos_client.hpp  spotify_client.cpp  spotify_client.hpp  unified_client.cpp  unified_client.hpp
src/modules/MediaBar/src/core/: config.cpp  config.hpp  debug_logger.hpp  lyrics_timing.cpp  lyrics_timing.hpp  types.hpp
src/modules/MediaBar/src/services/: lyrics_fetcher.cpp  lyrics_fetcher.hpp
src/modules/MediaBar/src/ui/: gui.cpp  gui.hpp  gui_playback.cpp  gui_setup.cpp  gui_sidebar.cpp  mini_player.cpp  mini_player.hpp
src/modules/MediaBar/src/ui/internal/: gui_detail_helpers.hpp
src/modules/StreamVault/: README.md
src/modules/StreamVault/src/core/: content_notification_service.cpp  content_notification_service.hpp  episode_progress_store.cpp  episode_progress_store.hpp  stream_entry.hpp  streaming_service.hpp  streamvault_settings.cpp  streamvault_settings.hpp  tmdb_client.cpp  tmdb_client.hpp  watchlist_store.cpp  watchlist_store.hpp
src/modules/StreamVault/src/model/: stream_model.cpp  stream_model.hpp
src/modules/StreamVault/src/ui/: stream_card_delegate.cpp  stream_card_delegate.hpp  streamvault_window.cpp  streamvault_window.hpp
tests/mediabar/: lyrics_timing_tests.cpp  lyrics_window_tests.cpp  unified_client_integration_tests.cpp
